最终的大作业完成了 后期还会把时钟的板子焊出来 最近比较忙 有空再说

--- a/PCB_Project/8LightADProject/Project Outputs for 8LEDProject/Design Rule Check - yhn.html
+++ b/PCB_Project/8LightADProject/Project Outputs for 8LEDProject/Design Rule Check - yhn.html
@@ -219,12 +219,12 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">11/24/2020</td>
+<td class="front_matter_column3">11/29/2020</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">3:53:22 PM</td>
+<td class="front_matter_column3">12:51:52 AM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
@@ -250,7 +250,7 @@
 <td class="DRC_summary_header_col3">0</td></tr>
 </table>
 </td>
-</table><a name="IDJLKB1TCS2LTQFY4EQPODPQFJ0MSR3PQTNSK2QTK0P0BHHMWKQRD"><h2>Summary</h2></a><table>
+</table><a name="ID0CKHPACRWN1DLR0CPIJURROMCB3F1NEIJ5DP0CEJG2EQZ0QE5TBM"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,55 +265,55 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDII3NPV3JK12YMKDAWGZTT2GY5JKL4XK42HQ4KTBESN4TGOLC1KXH">Clearance Constraint (Gap=0.178mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDHUFQAIBQPC4KLCI1LHAGA3HEIOFJ2JPJT5CMYVLFRMUXKOWFFXKI">Clearance Constraint (Gap=0.178mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDHB3VQ3JCOU50ETZOTBUOHXIWDIJVRGDZMXMWQDJ0LIIIUJPR55KO">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDF3S3LYOYVVLRM2B4UQ00AMZULOK4KKO402BZEYITVK12IHTNK5FB">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDOJ2B3U0UXBLBERC1EDCOZCJUHHYUZ1NRT0OHS5HDF10TBVQ12R1B">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDYPVPWJU4Y24BITECXW5AEYYVFMM0KDXCDOZTADC5MQ5QHE201BPG">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID5XDA4RZE3OGIHMCOU2KYGOTBCB111PYRSKVLR4OFBHASETYX1RSE">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#ID05F1CHPR4L2JFB0DW4NNW3OJ4NE1FNWAGTP3NPFPU3QF0OS0EDPF">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID2CSMKACRVB02CVTY3YVMQLW5XFKWZYDQ3RD1QQBRR40DFLSPTFJE">Width Constraint (Min=0.178mm) (Max=25.4mm) (Preferred=0.254mm) (All)</a></td>
+<td class="column1"><a href="#ID213YTKJOKSTDHSTBLGRYSPAFBKSSJ1WZTSIMPAIDE0GTYPNEX3AK">Width Constraint (Min=0.178mm) (Max=25.4mm) (Preferred=0.254mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID3TS2I052VFOKEFAD4FT2RETHAD2MF0DAP4PZ03IBK1VZ0ZDW12WB">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDRJT42HN2KVOIJ53RWYKQTMA4UKQ2HDCKVKTKAKIZ5ATUKIQWVGJE">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDUCR13SGPFGJDCU01QB3IJY0G0M1M4AZRZF1QLYMI05R5M5LD5DCC">Hole Size Constraint (Min=0.025mm) (Max=2.54mm) (All)</a></td>
+<td class="column1"><a href="#IDDC5NB3S3YU2DEHTHP00TVVQUGH1MTFMX0TX3UIBQ5R2DWDTV3JIC">Hole Size Constraint (Min=0.025mm) (Max=2.54mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDLZ1JMI0SBBXBFJSME1MXKVJDIGYPUAEN2K4UW4HPJKOF2SDBNWYB">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDS1CGYSCIOZDMNJCQKIQVNC0XTE1WUU3VOCZR3LD5F0UIGFLGAEKK">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDSME4SAPPBR5RD5UQGPFFD5BCEI43VC4UISYQJ5KTMQTILEAM4ULG">Minimum Solder Mask Sliver (Gap=0.254mm) (Disabled)(All),(All)</a></td>
+<td class="column1"><a href="#IDGSGKXN3YOML2JUCFQGPLMQI3ELG4XBWLPRZYWAGGHV2WMGCT4JKK">Minimum Solder Mask Sliver (Gap=0.254mm) (Disabled)(All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDEBGKCSOE5EEIFUDQDJIY4GBT1JSYTZX5FX35DLPZZVPPJKAXHXRH">Silk To Solder Mask (Clearance=0.254mm) (Disabled)(IsPad),(All)</a></td>
+<td class="column1"><a href="#ID0G3PIOQHUA4MOISU4ZXVK3WKEONS0HM2YP3YGRHVSCGFZUR23XBN">Silk To Solder Mask (Clearance=0.254mm) (Disabled)(IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID4GB4CNHRZVKDEBLZSCVBYK5X3IPPP0W3VID2WOL0E2JENJXSBOXL">Silk to Silk (Clearance=0.254mm) (Disabled)(All),(All)</a></td>
+<td class="column1"><a href="#IDS5ZWTASBMWNXK0ZCCI5ZCUBZC4LVTT2GEPDFKCSZQVMBYMRIVKL">Silk to Silk (Clearance=0.254mm) (Disabled)(All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID4HC3SZ0QGHBAMN2HKN3HHIJPUOCDA4JTUG0MUBCLYFFS3N4LDSWC">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column1"><a href="#IDQ31LJUXGHELH5DZ3K3DAIYHMK0T2HWVML3XYBES0GZN3IATK0U">Net Antennae (Tolerance=0mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDFX3HFFNHPZ3RERZ3QKUBRSGG4BTUJQH51Z1TEMA5MSNPG43UMAD">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
+<td class="column1"><a href="#ID0KTW3S2OTAK2K3QSHVN4XSQTYBZL2J5UECSKRVFLSG4PSF0CMA2E">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
