--- a/PCB_Project/ClockAD/Project Outputs for clockProject/Design Rule Check - clockPCB.html
+++ b/PCB_Project/ClockAD/Project Outputs for clockProject/Design Rule Check - clockPCB.html
@@ -219,22 +219,22 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">11/24/2020</td>
+<td class="front_matter_column3">11/29/2020</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">3:41:07 PM</td>
+<td class="front_matter_column3">12:53:43 AM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">00:00:01</td>
+<td class="front_matter_column3">00:00:02</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Filename:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3"><a href="file:///C:\Users\%E5%B0%B9%E6%B5%A9%E7%94%B7\OneDrive\%E6%A1%8C%E9%9D%A2\realClock\clockPCB.PcbDoc" class="file"><acronym title="C:\Users\ÒüºÆÄÐ\OneDrive\×ÀÃæ\realClock\clockPCB.PcbDoc">C:\Users\ÒüºÆÄÐ\OneDrive\×ÀÃæ\realClock\clockPCB.PcbDoc</acronym></a></td>
+<td class="front_matter_column3"><a href="file:///F:\project\github\unfinished\stm32AltiumDeigner\PCB_Project\ClockAD\clockPCB.PcbDoc" class="file"><acronym title="F:\project\github\unfinished\stm32AltiumDeigner\PCB_Project\ClockAD\clockPCB.PcbDoc">F:\project\github\unfinished\stm32AltiumDeigner\PCB_Project\ClockAD\clockPCB.PcbDoc</acronym></a></td>
 </tr>
 </table>
 </td>
@@ -250,7 +250,7 @@
 <td class="DRC_summary_header_col3">0</td></tr>
 </table>
 </td>
-</table><a name="IDMSWJVBRAUOUKI4A2BS5Z2YBINK5PCMSOZGMKHDITESD0P0N4LWRJ"><h2>Summary</h2></a><table>
+</table><a name="IDPNZSVXIWL00AMIDM2AUS0NGOTCZB4GUZTNYKSNKE3ERTAXCX5V2G"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,55 +265,55 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDQKALU3GPZVXIJM1ZAGRI4BQPUHQKNHVQTUZ5BLNVAJKZMY4W5KAK">Clearance Constraint (Gap=0.178mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDZBCOVKHJDBCXMHIXSDNNJGLMPEO4WOPAF5BR1UNDJNHSEFIEFAOO">Clearance Constraint (Gap=7mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDTB0MACUY2BYAD3MYPMGUE5HANDN3T4SREU102OGMOB1GSS2YYOSL">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#ID0S5VOZXSXFOIPLOVCEB512MJIELJTMN5CQQEZEIZN2MI41WKD4BK">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDXJZ00C05DVYUIAQRLFP5H1W2RKPPXONHOYW0NFGXKPVPIPREFLRE">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDEBXNEVWRORZPPUHBTX1DF10CGFERCNJ51CICLMEESBKHRLMU0DQ">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDBKBYF4QFSTGCOGDECWCBYFKW3GS2FHBVRVDD0GFE1UH2IUTSDWU">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#IDT450Q2NXW4E5LFGDFSYBGGSPUCHONJYMUHQLWQFBAI1YMUT2NKFC">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDJWRWOPKFVFHOBNYYEAQJSRERELQ2EMMYIR5GMEG3T4ZMHNW4AJ1K">Width Constraint (Min=0.178mm) (Max=25.4mm) (Preferred=0.254mm) (All)</a></td>
+<td class="column1"><a href="#ID2TQ5UIKMNFFLDE2RAPH1LHOM3DEFCGW3RTVZO3OGRU310I4CFARI">Width Constraint (Min=7mil) (Max=1000mil) (Preferred=10mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDVLVGKB0TMCJFPWH1N4XKOXZCZPIW0BRCMKRFTEO0MDQZMUTI0KJP">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDUIWRKA1FHY4YGL3RY2D3RICSRMEMQBHQ5MOHMIQBDXRNUQIZXOF">Power Plane Connect Rule(Relief Connect )(Expansion=20mil) (Conductor Width=10mil) (Air Gap=10mil) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDA1MJYNBYHW5CKBUAKSCJMVUXIMMJGUE0BAZYGII1RD25LAA4YUBC">Hole Size Constraint (Min=0.025mm) (Max=2.54mm) (All)</a></td>
+<td class="column1"><a href="#IDQD5URRCNFXXTBQKWFLUETEZXBL1IXE23RB4FCIH5F0IQWAI1Q5AI">Hole Size Constraint (Min=1mil) (Max=100mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDIVEDTIVHGZ4GOYMP0H1ZZZDHFFY3ARSED3WTT4DR5HIYBYBMJQCK">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDTJMDLQJUPMTXCSPJBVEHKYBZYJIY2EIBJROLETQ3SU35MBEXSMK">Hole To Hole Clearance (Gap=10mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDWBXKM0C123T0EN0YPNT2ZFGN0C0MFLJMUGPUCEKRJMJ33H3KYVNJ">Minimum Solder Mask Sliver (Gap=0.254mm) (Disabled)(All),(All)</a></td>
+<td class="column1"><a href="#IDFM2KGUXTSOTANPDIGBZJP3LIIJ0SRKJYUP31KHNO3MEN1VZLU10M">Minimum Solder Mask Sliver (Gap=10mil) (Disabled)(All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDJVEA1S4GYHTZGAJAICWGKMIJ3HNXUWN5QWSGIJJOUSEBSNGMIQLK">Silk To Solder Mask (Clearance=0.254mm) (Disabled)(IsPad),(All)</a></td>
+<td class="column1"><a href="#IDFHG5NHVEB25MFOSZBZP4CFA3BBQY1BEKWACZELPNCWG324ETTGLJ">Silk To Solder Mask (Clearance=10mil) (Disabled)(IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID0JRSA4YSXGYHBTTI4AAAMLF1PD2DDFXHQ40X03FAD4OFH0ESTUUG">Silk to Silk (Clearance=0.254mm) (Disabled)(All),(All)</a></td>
+<td class="column1"><a href="#IDOUB53TEK1RRTIHKANCKI5DHF0MAYV2TKWVMVOCFZYOTKKDA33ANG">Silk to Silk (Clearance=10mil) (Disabled)(All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDIDVCXSH5VQV2LWN52SOYY2GEDKJQS3C44K5HVYMHFM0SZHRKEDYM">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column1"><a href="#IDZCTG5KB00LE5413R4O2EMUOIB43MAR3A3GOWVH3Y1JPP1LRVV2J">Net Antennae (Tolerance=0mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDJ5U1IOKXMKARE4SIHNMZC0HEDKLLY32WKMBR34HQTSWPOBBEZUFN">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
+<td class="column1"><a href="#IDQ0ISCYF2VWLSNGMDNRQM1FZCYLEH22KIBYK2EEL3QOT2JJ20CBRE">Height Constraint (Min=0mil) (Max=1000mil) (Prefered=500mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
